// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRadius": 2,
            "borderWidth": 1,
            "paddingBottom": 12,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 12,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 13,
              "paddingBottom": 5,
              "paddingTop": 5,
            }
          }
        >
          Football
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. group of topics at large scale 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRadius": 2,
            "borderWidth": 1,
            "paddingBottom": 12,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 12,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 14,
              "lineHeight": 14,
              "paddingBottom": 5,
              "paddingTop": 5,
            }
          }
        >
          Football
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. group of topics at xlarge scale 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRadius": 2,
            "borderWidth": 1,
            "paddingBottom": 12,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 12,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "lineHeight": 15,
              "paddingBottom": 5,
              "paddingTop": 5,
            }
          }
        >
          Football
        </Text>
      </View>
    </View>
  </View>
</View>
`;
